<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.trabajo.carlos.sender.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgUsuarioAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/desAvatar"
            android:src="@drawable/ic_usuario" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtOldPass"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtNewPass"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtFullName"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtEmail"
                android:inputType="textEmailAddress"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtTelefono"
                android:inputType="phone"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnUpdate"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnActualizarPerfil" />

        <Button
            android:id="@+id/btnCancelarUpdate"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btnCancelar" />

    </LinearLayout>


</ScrollView>
